src/objects/Lcm_Release__c.object
<CustomObject>
    <description>Sprint nach SCRUM-Entwicklungsmethode. Fasst Tickets zusammen, die in einem Sprint umgesetzt werden.
Dient der Termin- und Kapazitätsauslastung von Entwickungen.</description>
    <fields>
        <fullName>Lcm_CaseCountAll__c</fullName>
        <label>Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lcm_CaseCountDevOpen__c</fullName>
        <description>Dev. relevante Tickets offen</description>
        <label>Tickets Dev offen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lcm_CaseCountDev__c</fullName>
        <description>Dev. relevante Tickets (von Dev_doing bis GoLive_done)</description>
        <inlineHelpText>Dev. relevante Tickets (von Dev_doing bis GoLive_done)</inlineHelpText>
        <label>Tickets Dev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lcm_CaseCountOpen__c</fullName>
        <label>Tickets offen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lcm_CaseEffortActual__c</fullName>
        <label>Summe Ist-Std.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lcm_CaseEffortEstimated__c</fullName>
        <description>GROBE Aufwandsschätzung in Stunden für die Umsetzung der Sprint-Tickets.</description>
        <inlineHelpText>GROBE Aufwandsschätzung in Stunden für die Umsetzung der Sprint-Tickets.</inlineHelpText>
        <label>Summe Aufwand Schätzung</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lcm_CaseEffortTarget__c</fullName>
        <label>Summe Soll-Std.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lcm_Current__c</fullName>
        <description>Release ist aktuell bezogen auf Start/Ende</description>
        <formula>Lcm_StartDate__c &lt;= TODAY() 
&amp;&amp;
TODAY() &lt;= Lcm_EndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Release ist aktuell bezogen auf Start/Ende</inlineHelpText>
        <label>aktuell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lcm_EndDate__c</fullName>
        <label>Ende</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lcm_RemainingDays__c</fullName>
        <description>verbleibende Tage bis Ende des Releases</description>
        <formula>Lcm_EndDate__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>verbleibende Tage bis Ende des Releases</inlineHelpText>
        <label>verbleibendeTage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lcm_SprintGoal__c</fullName>
        <label>Sprint-Ziel</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_StartDate__c</fullName>
        <label>Start</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lcm_SumOfStoryPoints__c</fullName>
        <description>Die Summe der Story Points aller KVs.
Wird über den Rollup-Helper befüllt.</description>
        <label>Summe Story Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Sprint</label>
    <listViews>
        <fullName>Alle</fullName>
        <columns>NAME</columns>
        <columns>Lcm_CaseCountAll__c</columns>
        <columns>Lcm_CaseCountOpen__c</columns>
        <columns>Lcm_Current__c</columns>
        <columns>Lcm_StartDate__c</columns>
        <columns>Lcm_EndDate__c</columns>
        <columns>Lcm_RemainingDays__c</columns>
        <columns>Lcm_CaseEffortTarget__c</columns>
        <columns>Lcm_CaseEffortActual__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>aktuelles_Jahr</fullName>
        <columns>NAME</columns>
        <columns>Lcm_CaseCountAll__c</columns>
        <columns>Lcm_CaseCountOpen__c</columns>
        <columns>Lcm_Current__c</columns>
        <columns>Lcm_StartDate__c</columns>
        <columns>Lcm_EndDate__c</columns>
        <columns>Lcm_RemainingDays__c</columns>
        <columns>Lcm_SumOfStoryPoints__c</columns>
        <columns>Lcm_CaseEffortTarget__c</columns>
        <columns>Lcm_CaseEffortActual__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_StartDate__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>aktuelles Jahr</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>mit_offenen_KVs</fullName>
        <columns>NAME</columns>
        <columns>Lcm_CaseCountAll__c</columns>
        <columns>Lcm_CaseCountOpen__c</columns>
        <columns>Lcm_Current__c</columns>
        <columns>Lcm_StartDate__c</columns>
        <columns>Lcm_EndDate__c</columns>
        <columns>Lcm_RemainingDays__c</columns>
        <columns>Lcm_CaseEffortTarget__c</columns>
        <columns>Lcm_CaseEffortActual__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_CaseCountOpen__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>mit offenen KVs</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>n_chstes_Jahr</fullName>
        <columns>NAME</columns>
        <columns>Lcm_CaseCountAll__c</columns>
        <columns>Lcm_CaseCountOpen__c</columns>
        <columns>Lcm_Current__c</columns>
        <columns>Lcm_StartDate__c</columns>
        <columns>Lcm_EndDate__c</columns>
        <columns>Lcm_RemainingDays__c</columns>
        <columns>Lcm_CaseEffortTarget__c</columns>
        <columns>Lcm_CaseEffortActual__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_StartDate__c</field>
            <operation>equals</operation>
            <value>NEXT_YEAR</value>
        </filters>
        <label>nächstes Jahr</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>thun</fullName>
        <columns>NAME</columns>
        <columns>Lcm_CaseCountAll__c</columns>
        <columns>Lcm_CaseCountOpen__c</columns>
        <columns>Lcm_Current__c</columns>
        <columns>Lcm_StartDate__c</columns>
        <columns>Lcm_EndDate__c</columns>
        <columns>Lcm_RemainingDays__c</columns>
        <columns>Lcm_CaseEffortTarget__c</columns>
        <columns>Lcm_CaseEffortActual__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>greaterThan</operation>
            <value>2017_Kw13</value>
        </filters>
        <label>thun</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>Sprint</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>